==> wjb1991/Gas_LaserBoard/Sources_Bsp/bsp_usart.c <==
#include   "Bsp.h"
#define     DEF_UART_CONFIG         115200,UART_WORDLENGTH_8B,UART_STOPBITS_1,UART_PARITY_NONE,UART_HWCONTROL_NONE,UART_MODE_TX_RX
#define     DEF_UART_HOOK           0,0,0,0
#define     DEF_UART_BUFF_SIZE      100

void Bsp_UsartRxEnable(Dev_SerialPort* pst_Dev)
{
	struct SCI_REGS * UartHandle = pst_Dev->pv_UartHandle;
    /* 开启接受完成中断 */  
	if(UartHandle == &SciaRegs)
	{
		PieCtrlRegs.PIEIER9.bit.INTx1 = 1;          // Enable PIE Group 9 INT1
	}
	else if(UartHandle == &ScibRegs)
	{
		PieCtrlRegs.PIEIER9.bit.INTx3 = 1;          // Enable PIE Group 9 INT3
	}
	else if(UartHandle == &ScicRegs)
	{
		PieCtrlRegs.PIEIER8.bit.INTx5 = 1;          // Enable PIE Group 8 INT5
	}
	else if(UartHandle == &ScidRegs)
	{
		PieCtrlRegs.PIEIER8.bit.INTx7 = 1;          // Enable PIE Group 8 INT7
	}
}

void Bsp_UsartRxDisable(Dev_SerialPort* pst_Dev)
{
	struct SCI_REGS * UartHandle = pst_Dev->pv_UartHandle;
    /* 开启接受完成中断 */
	if(UartHandle == &SciaRegs)
	{
		PieCtrlRegs.PIEIER9.bit.INTx1 = 0;          // Enable PIE Group 9 INT1
	}
	else if(UartHandle == &ScibRegs)
	{
		PieCtrlRegs.PIEIER9.bit.INTx3 = 0;          // Enable PIE Group 9 INT3
	}
	else if(UartHandle == &ScicRegs)
	{
		PieCtrlRegs.PIEIER8.bit.INTx5 = 0;          // Enable PIE Group 8 INT5
	}
	else if(UartHandle == &ScidRegs)
	{
		PieCtrlRegs.PIEIER8.bit.INTx7 = 0;          // Enable PIE Group 8 INT7
	}
}

void Bsp_UsartTxEnable(Dev_SerialPort* pst_Dev)
{
	struct SCI_REGS * UartHandle = pst_Dev->pv_UartHandle;
    /* 开启发送完成中断 */
	if(UartHandle == &SciaRegs)
	{
		PieCtrlRegs.PIEIER9.bit.INTx2 = 1;          // Enable PIE Group 9 INT1
	}
	else if(UartHandle == &ScibRegs)
	{
		PieCtrlRegs.PIEIER9.bit.INTx4 = 1;          // Enable PIE Group 9 INT3
	}
	else if(UartHandle == &ScicRegs)
	{
		PieCtrlRegs.PIEIER8.bit.INTx6 = 1;          // Enable PIE Group 8 INT5
	}
	else if(UartHandle == &ScidRegs)
	{
		PieCtrlRegs.PIEIER8.bit.INTx8 = 1;          // Enable PIE Group 8 INT7
	}
}

void Bsp_UsartTxDisable(Dev_SerialPort* pst_Dev)
{
	struct SCI_REGS * UartHandle = pst_Dev->pv_UartHandle;
    /* 关闭发送完成中断 */
	if(UartHandle == &SciaRegs)
	{
		PieCtrlRegs.PIEIER9.bit.INTx2 = 0;          // Enable PIE Group 9 INT1
	}
	else if(UartHandle == &ScibRegs)
	{
		PieCtrlRegs.PIEIER9.bit.INTx4 = 0;          // Enable PIE Group 9 INT3
	}
	else if(UartHandle == &ScicRegs)
	{
		PieCtrlRegs.PIEIER8.bit.INTx6 = 0;          // Enable PIE Group 8 INT5
	}
	else if(UartHandle == &ScidRegs)
	{
		PieCtrlRegs.PIEIER8.bit.INTx8 = 0;          // Enable PIE Group 8 INT7
	}
}

BOOL Bsp_UartOpen(Dev_SerialPort* pst_Dev)
{
    struct SCI_REGS* UartHandle = pst_Dev->pv_UartHandle;
    
    HAL_UART_MspInit(pst_Dev->pv_UartHandle);

    UartHandle->SCICCR.all = 0x0007; // 1 stop bit,  No loopback
                                    // No parity,8 char bits,
                                    // async mode, idle-line protocol
    UartHandle->SCICTL1.all = 0x0003; // enable TX, RX, internal SCICLK,
                                     // Disable RX ERR, SLEEP, TXWAKE
    UartHandle->SCICTL2.all = 0x0003;
    UartHandle->SCICTL2.bit.TXINTENA = 1;
    UartHandle->SCICTL2.bit.RXBKINTENA = 1;

    //
    // SCIA at 9600 baud
    // @LSPCLK = 50 MHz (200 MHz SYSCLK) HBAUD = 0x02 and LBAUD = 0x8B.
    // @LSPCLK = 30 MHz (120 MHz SYSCLK) HBAUD = 0x01 and LBAUD = 0x86.
    //
	INT16U uin_Temp = (INT16U)(200e6 / 4 / pst_Dev->ul_BaudRate / 8 - 1); //Baud = LSPCLK / ((BRR + 1) *8)

    UartHandle->SCIHBAUD.all = uin_Temp >> 8;
    UartHandle->SCILBAUD.all = uin_Temp & 0xff;

    UartHandle->SCICTL1.all = 0x0023;  // Relinquish SCI from Reset

    UartHandle->SCIFFTX.all = 0xA040;
    UartHandle->SCIFFRX.all = 0x2044;
    UartHandle->SCIFFCT.all = 0x0;
    
	if(UartHandle == &SciaRegs)
	{
        EALLOW;	// This is needed to write to EALLOW protected registers
        PieVectTable.SCIA_RX_INT = &Bsp_SciaRecvIsr;
        PieVectTable.SCIA_TX_INT = &Bsp_SciaSendIsr;
        EDIS;   // This is needed to disable write to EALLOW protected registers

        PieCtrlRegs.PIECTRL.bit.ENPIE = 1;          // Enable the PIE block
        IER |= M_INT9;                              // Enable CPU INT9
	}
	else if(UartHandle == &ScibRegs)
	{
        EALLOW;	// This is needed to write to EALLOW protected registers
        PieVectTable.SCIB_RX_INT = &Bsp_ScibRecvIsr;
        PieVectTable.SCIB_TX_INT = &Bsp_ScibSendIsr;
        EDIS;   // This is needed to disable write to EALLOW protected registers

        PieCtrlRegs.PIECTRL.bit.ENPIE = 1;          // Enable the PIE block
        IER |= M_INT9;                              // Enable CPU INT9
	}
	else if(UartHandle == &ScicRegs)
	{
        EALLOW;	// This is needed to write to EALLOW protected registers
        PieVectTable.SCIC_RX_INT = &Bsp_ScicRecvIsr;
        PieVectTable.SCIC_TX_INT = &Bsp_ScicSendIsr;
        EDIS;   // This is needed to disable write to EALLOW protected registers

        PieCtrlRegs.PIECTRL.bit.ENPIE = 1;          // Enable the PIE block
        IER |= M_INT8;                              // Enable CPU INT8
	}
	else if(UartHandle == &ScidRegs)
	{
        EALLOW;	// This is needed to write to EALLOW protected registers
        PieVectTable.SCID_RX_INT = &Bsp_ScidRecvIsr;
        PieVectTable.SCID_TX_INT = &Bsp_ScidSendIsr;
        EDIS;   // This is needed to disable write to EALLOW protected registers

        PieCtrlRegs.PIECTRL.bit.ENPIE = 1;          // Enable the PIE block
        IER |= M_INT8;                              // Enable CPU INT8
	}
	Bsp_UsartTxEnable(pst_Dev);
	Bsp_UsartRxEnable(pst_Dev);

    return TRUE;
}

BOOL Bsp_UartClose(Dev_SerialPort* pst_Dev)
{
	HAL_UART_MspDeInit(pst_Dev->pv_UartHandle);
    return TRUE;
}

void HAL_UART_MspInit(struct SCI_REGS *huart)
{
    if(huart == &SciaRegs)
    {
        // SCIA GPIO 初始化
#if 0
        GPIO_SetupPinMux(9, GPIO_MUX_CPU1, 6);
        GPIO_SetupPinOptions(9, GPIO_INPUT, GPIO_PUSHPULL);
        GPIO_SetupPinMux(8, GPIO_MUX_CPU1, 6);
        GPIO_SetupPinOptions(8, GPIO_OUTPUT, GPIO_ASYNC);
#else
        GPIO_SetupPinMux(64, GPIO_MUX_CPU1, 6);
        GPIO_SetupPinOptions(64, GPIO_INPUT, GPIO_PUSHPULL);
        GPIO_SetupPinMux(65, GPIO_MUX_CPU1, 6);
        GPIO_SetupPinOptions(65, GPIO_OUTPUT, GPIO_ASYNC);
#endif

    }
    else if(huart == &ScibRegs)
    {
        // SCIB GPIO 初始化
        GPIO_SetupPinMux(11, GPIO_MUX_CPU1, 6);
        GPIO_SetupPinOptions(11, GPIO_INPUT, GPIO_PUSHPULL);
        GPIO_SetupPinMux(10, GPIO_MUX_CPU1, 6);
        GPIO_SetupPinOptions(10, GPIO_OUTPUT, GPIO_ASYNC);
    }
    else if(huart == &ScicRegs)
    {

    }
    else if(huart == &ScidRegs)
    {

    }
}

void HAL_UART_MspDeInit(struct SCI_REGS *huart)
{
    if(huart == &SciaRegs)
    {

    }
    else if(huart == &ScibRegs)
    {

    }
    else if(huart == &ScicRegs)
    {

    }
    else if(huart == &ScidRegs)
    {

    }
}
